# curlpp

./: .gitattributes  .gitignore  .hgignore  .travis.yml  AUTHORS  CHANGES  CMakeLists.txt  CNAME  ChangeLog  Doxyfile  FEATURES  KNOWN_BUGS  Makefile.am  Makefile.msvc  README  README.win32  Readme.md  TODO  _config.yml  aclocal.m4  appveyor.yml  autogen.sh  compile  conanfile.txt  config.guess  config.sub  configure  configure.ac  cross-configure.sh  cross-make.sh  cscope.files  curlpp-config.in  curlpp.VC8.sln  curlpp.VC8.vcproj  curlpp.VC9.sln  curlpp.VC9.vcproj  curlpp.VC9.vsprops  curlpp.common.VC9.vsprops  curlpp.examples.VC9.vcproj  curlpp.sln  (+9 more)
cmake/: curlppConfig.cmake
curlpp/: CurlHandle.cpp  CurlHandle.hpp  CurlHandle.inl  Easy.cpp  Easy.hpp  Easy.inl  Exception.cpp  Exception.hpp  FileTrait.hpp  Form.cpp  Form.hpp  Handle.cpp  Handle.hpp  Info.cpp  Info.hpp  Info.inl  Infos.hpp  Makefile.am  Makefile.msvc  Multi.cpp  Multi.hpp  NonCopyable.hpp  Option.hpp  Option.inl  OptionBase.cpp  OptionBase.hpp  OptionContainer.hpp  OptionContainer.inl  OptionContainerType.hpp  OptionList.cpp  OptionList.hpp  OptionSetter.cpp  OptionSetter.hpp  OptionSetter.inl  Options.cpp  Options.hpp  SList.cpp  SList.hpp  Storage.cpp  Storage.hpp  (+12 more)
doc/: AUTHORS  CMakeLists.txt  LICENSE  Makefile.am  README.win32  TODO  guide.tex
examples/: CMakeLists.txt  Makefile.am  Makefile.msvc  README  curlpp.examples.VC8.vcproj  example00.cpp  example01.cpp  example02.cpp  example03.cpp  example04.cpp  example05.cpp  example06.cpp  example07.cpp  example08.cpp  example09.cpp  example10.cpp  example11.cpp  example12.cpp  example13.cpp  example14.cpp  example15.cpp  example16.cpp  example17.cpp  example18.cpp  example19.cpp  example20.cpp  example21.cpp  example22.cpp  example23.cpp  example24.cpp  example25.cpp  example26.cpp  sample-orig.cpp  sample.cpp
extras/: CMakeLists.txt  FindCURLpp.cmake  curlpp-config.in  curlpp.pc.in
include/: CMakeLists.txt  Makefile.am
include/curlpp/: CMakeLists.txt  CurlHandle.hpp  CurlHandle.inl  Easy.hpp  Easy.inl  Exception.hpp  FileTrait.hpp  Form.hpp  Handle.hpp  Info.hpp  Info.inl  Infos.hpp  Makefile.am  Multi.hpp  NonCopyable.hpp  Option.hpp  Option.inl  OptionBase.hpp  OptionContainer.hpp  OptionContainer.inl  OptionContainerType.hpp  OptionList.hpp  OptionSetter.hpp  OptionSetter.inl  Options.hpp  SList.hpp  Storage.hpp  StorageOptions.hpp  StorageOptions.inl  StorageTrait.hpp  StreamTrait.hpp  TypeTrait.hpp  Types.hpp  buildconfig.h  cURLpp.hpp  config.h.sample  config.win32.h  global.h
include/curlpp/internal/: CMakeLists.txt  CurlHandle.hpp  CurlHandle.inl  Makefile.am  OptionContainer.hpp  OptionContainer.inl  OptionContainerType.hpp  OptionList.hpp  OptionSetter.hpp  OptionSetter.inl  SList.hpp  global.h
include/utilspp/: CMakeLists.txt  EmptyType.hpp  Functors.hpp  Makefile.am  NonCopyable.hpp  NullType.hpp  SmartPtr.hpp  ThreadingFactoryMutex.hpp  ThreadingFactoryMutex.inl  ThreadingSingle.hpp  ThreadingSingle.inl  TypeList.hpp  TypeTrait.hpp  clone_ptr.hpp
include/utilspp/functor/: Binder.hpp  CMakeLists.txt  Functor.hpp  FunctorHandler.hpp  FunctorImpl.hpp  Makefile.am  MemFunHandler.hpp
include/utilspp/singleton/: CMakeLists.txt  CreationStatic.hpp  CreationStatic.inl  CreationUsingNew.hpp  CreationUsingNew.inl  LifetimeDefault.inl  LifetimeLibrary.hpp  LifetimeLibrary.inl  LifetimeWithLongevity.hpp  LifetimeWithLongevity.inl  Makefile.am  PrivateMembers.hpp  PrivateMembers.inl  SingletonHolder.hpp  SingletonHolder.inl
m4/: ax_boost.m4  ax_boost_base.m4  boost.m4
src/: CMakeLists.txt  Makefile.am
src/curlpp/: CMakeLists.txt  CurlHandle.cpp  Easy.cpp  Easy.custom.ins  Easy.ins  Exception.cpp  Exception.ins  Form.cpp  Handle.cpp  Info.cpp  Infos.cpp  Infos.ins  Makefile.am  Makefile.msvc  Multi.cpp  Option.cpp  Option.ins  OptionBase.cpp  OptionList.cpp  OptionSetter.cpp  Options.cpp  Options.custom.ins  Options.ins  SList.cpp  Storage.cpp  StorageTrait.cpp  StreamTrait.cpp  autolink.h  cURLpp.cpp  cURLpp.cppm
src/curlpp/internal/: CMakeLists.txt  CurlHandle.cpp  Makefile.am  OptionList.cpp  OptionSetter.cpp  SList.cpp
src/utilspp/: CMakeLists.txt  LifetimeLibrary.cpp  Makefile.am
src/utilspp/singleton/: CMakeLists.txt  LifetimeLibrary.cpp  Makefile.am  PrivateMembers.cpp
utilspp/: EmptyType.hpp  Functors.hpp  Makefile.am  NonCopyable.hpp  NullType.hpp  Singleton.hpp  SmartPtr.hpp  ThreadingFactoryMutex.hpp  ThreadingFactoryMutex.inl  ThreadingSingle.hpp  ThreadingSingle.inl  TypeList.hpp  TypeTrait.hpp  clone_ptr.hpp
utilspp/functor/: Binder.hpp  Binder.inl  Functor.hpp  Functor.inl  FunctorHandler.hpp  FunctorImpl.hpp  Makefile.am  MemFunHandler.hpp
utilspp/singleton/: CreationStatic.hpp  CreationStatic.inl  CreationUsingNew.hpp  CreationUsingNew.inl  LifetimeDefault.hpp  LifetimeLibrary.cpp  LifetimeLibrary.hpp  LifetimeLibrary.inl  LifetimeWithLongevity.hpp  LifetimeWithLongevity.inl  Makefile.am  PrivateMembers.cpp  PrivateMembers.hpp  SingletonHolder.hpp  SingletonHolder.inl
win32/: create-vc-solution.bat  curlpp.common.vsprops.stub  curlpp.examples.vcproj.stub  curlpp.examples.vsprops.stub  curlpp.lib.vcproj.stub
