if MAINTENER_CODE
maintener_programs = example10 
endif

EXTRA_DIST = Makefile.msvc

noinst_PROGRAMS = example01 example02 example03 example04 example05 example06 example07 example08 example09 example11 example12 example13 example14 example15 example16 ${maintener_programs}



example01_SOURCES = example01.cpp

example02_SOURCES = example02.cpp

example03_SOURCES = example03.cpp

example04_SOURCES = example04.cpp

example05_SOURCES = example05.cpp

example06_SOURCES = example06.cpp

example07_SOURCES = example07.cpp

example08_SOURCES = example08.cpp

example09_SOURCES = example09.cpp

example10_SOURCES = example10.cpp

example11_SOURCES = example11.cpp

example12_SOURCES = example12.cpp

example13_SOURCES = example13.cpp

example14_SOURCES = example14.cpp

example15_SOURCES = example15.cpp

example16_SOURCES = example16.cpp

AM_LDFLAGS = -L../curlpp/ -lcurlpp -static 

AM_CXXFLAGS=-I../ 

