if MAINTENER_CODE
maintener_programs = 
endif

if HAVE_BOOST
boost_programs = example18 example20
endif

EXTRA_DIST = Makefile.msvc

noinst_PROGRAMS = \
	example01 \
	example02 \
	example03 \
	example04 \
	example05 \
	example06 \
	example07 \
	example08 \
	example09 \
	example10 \
	example11 \
	example12 \
	example13 \
	example14 \
	example15 \
	example16 \
	example17 \
	example19 \
	example21 \
	example22 \
	example23 \
	example24 \
	${maintener_programs} ${boost_programs}



example01_SOURCES = example01.cpp

example02_SOURCES = example02.cpp

example03_SOURCES = example03.cpp

example04_SOURCES = example04.cpp

example05_SOURCES = example05.cpp

example06_SOURCES = example06.cpp

example07_SOURCES = example07.cpp

example08_SOURCES = example08.cpp

example09_SOURCES = example09.cpp

example10_SOURCES = example10.cpp

example11_SOURCES = example11.cpp

example12_SOURCES = example12.cpp

example13_SOURCES = example13.cpp

example14_SOURCES = example14.cpp

example15_SOURCES = example15.cpp

example16_SOURCES = example16.cpp

example17_SOURCES = example17.cpp

example18_SOURCES = example18.cpp

example19_SOURCES = example19.cpp

example20_SOURCES = example20.cpp

example21_SOURCES = example21.cpp

example22_SOURCES = example22.cpp

example23_SOURCES = example23.cpp

example24_SOURCES = example24.cpp

AM_LDFLAGS = -L../src/curlpp/ -lcurlpp -static 

INCLUDES = -I$(top_builddir)/include



