pkginclude_HEADERS = \
	CurlHandle.hpp CurlHandle.inl \
	Easy.hpp Easy.inl \
	Exception.hpp \
	FileTrait.hpp \
	Form.hpp \
	Handle.hpp \
	Info.hpp Info.inl \
	Infos.hpp \
	Multi.hpp \
	NonCopyable.hpp \
	Option.hpp Option.inl \
	OptionBase.hpp \
	OptionContainer.hpp OptionContainer.inl	OptionContainerType.hpp \
	OptionList.hpp \
	OptionSetter.hpp OptionSetter.inl \
	Options.hpp \
	SList.hpp \
	Storage.hpp \
	StorageOptions.hpp StorageOptions.inl \
	StorageTrait.hpp  \
	StreamTrait.hpp \
	TypeTrait.hpp \
	Types.hpp \
	buildconfig.h \
	cURLpp.hpp \
	config.h.in \
	config.h.sample \
	config.win32.h \
	global.h

pkgincludedir=$(includedir)/curlpp
