SUBDIRS = internal 

pkginclude_HEADERS = \
	Easy.hpp Easy.inl \
	Exception.hpp \
	Form.hpp \
	Info.hpp Info.inl \
	Infos.hpp \
	Multi.hpp \
	Option.hpp Option.inl \
	OptionBase.hpp \
	Options.hpp \
	Types.hpp \
	cURLpp.hpp \
	config.h.in \
	config.h.sample \
	config.win32.h 

pkgincludedir=$(includedir)/curlpp
