SUBDIRS = functor singleton

pkginclude_HEADERS = \
	EmptyType.hpp \
	Functors.hpp \
	NonCopyable.hpp \
	NullType.hpp \
	Singleton.hpp \
	SmartPtr.hpp \
	ThreadingFactoryMutex.hpp ThreadingFactoryMutex.inl \
	ThreadingSingle.hpp ThreadingSingle.inl \
	TypeList.hpp \
	TypeTrait.hpp \
	clone_ptr.hpp

pkgincludedir=$(includedir)/utilspp
